<!--
<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_title">
        <Preference
            android:title="@string/version_code_title"
            android:summary="@string/version_code_summery">
        </Preference>
        <Preference
            android:title="@string/copyright_title"
            android:summary="@string/copyright_summery">
        </Preference>
        <Preference
            android:title="@string/support_by_title"
            android:summary="@string/support_by_summery">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_local_times"
        android:title="@string/pref_local_times_title"
        android:summary="@string/pref_local_times_description"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_attendee_at_venue"
        android:title="@string/pref_attendee_at_venue_title"
        android:summary="@string/pref_attendee_at_venue_description"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_analytics_enabled"
        android:title="@string/pref_analytics_enabled_title"
        android:summary="@string/pref_analytics_enabled_description"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_sync_calendar"
        android:title="@string/pref_sync_with_calendar_title"
        android:summary="@string/pref_sync_with_calendar_description"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_show_session_reminders"
        android:title="@string/pref_notify_starred_sessions_title"
        android:summary="@string/pref_notify_starred_sessions_description"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_session_feedback_reminders"
        android:title="@string/pref_notify_feedback_title"
        android:summary="@string/pref_notify_feedback_description"
        android:defaultValue="true" />

</PreferenceScreen>